# umeq

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  README.rst  q
cmake/: GetGitRevisionDescription.cmake
jitter/: be_x86_64.c  be_x86_64.h  jitter.c  jitter.h
src/: CMakeLists.txt  custom.ld  main.c  start.S  umeq.c  umeq.h
src/cache/: CMakeLists.txt  cache.c  cache.h  cacheNone.c
src/fpu/: CMakeLists.txt  softfloat.c  softfloat.h
src/gdb/: CMakeLists.txt  breakpoints.c  breakpoints.h  gdb.c  gdb.h
src/i386/: CMakeLists.txt  start.S  umeq.c
src/jitter/: CMakeLists.txt  be.h  be_i386.c  be_i386.h  be_i386_asm.S  be_i386_private.h  be_x86_64.c  be_x86_64.h  be_x86_64_asm.S  be_x86_64_private.h  jitter.c  jitter.h  jitter_types.h
src/jitter/i386/: CMakeLists.txt  be_i386.c
src/jitter/x86_64/: CMakeLists.txt  be_x86_64.c  be_x86_64_asm.S  be_x86_64_private.h
src/loader/: CMakeLists.txt  loader.h  loader32.c  loader64.c
src/loader/loader32/: CMakeLists.txt  loader32.c  loader32.h
src/loader/loader64/: CMakeLists.txt  loader64.c  loader64.h
src/runtime/: CMakeLists.txt  abort.c  assert.c  close.c  errno.c  exit.c  fcntl.c  limit.c  log.c  lseek.c  map.c  math.c  memcpy.S  open.c  pthread.c  read.c  runtime.h  socket.c  stdio.c  string.c  strtoull.c  syscall.S  udivdi3.S
src/runtime/i386/: CMakeLists.txt  math.c  memcpy.c  udivdi3.S
src/runtime/i386/syscall_wrapper/: syscall.S
src/runtime/syscall_wrapper/: abort.c  close.c  exit.c  fcntl.c  limit.c  lseek.c  map.c  mkdir.c  open.c  read.c  shmctl.c  socket.c  syscall.S  unlink.c  write.c
src/runtime/x86_64/: CMakeLists.txt  math.c  memcpy.S
src/runtime/x86_64/syscall_wrapper/: syscall.S
src/syscall/: CMakeLists.txt  syscalls_neutral.h  syscalls_neutral_types.h  syscalls_neutral_types_32.h  syscalls_neutral_types_64.h  syscalls_neutral_types_common.h  sysnum.h  sysnums.list
src/syscall/adapters/: adapters_private.h  copy.c  guest32_to_neutral32_adapter.c  guest32_to_neutral64_adapter.c  guest64_to_neutral64_adapter.c  shebang.c
src/syscall/i386/: CMakeLists.txt  syscall_i386.h  syscall_i386_stat.c  syscall_neutral_32.c
src/syscall/syscall32_32/: CMakeLists.txt  execve_s3232.c  fcntl_s3232.c  futex_s3232.c  keyctl_s3232.c  mqueue_s3232.c  network_s3232.c  prctl_s3232.c  readv_writev_s3232.c  select_s3232.c  stat_s3232.c  syscall32_32.c  syscall32_32.h  syscall32_32_private.h  syscall32_32_types.h  vmsplice_s3232.c
src/syscall/syscall32_64/: CMakeLists.txt  clock_s3264.c  epoll_s3264.c  execve_s3264.c  fcntl_s3264.c  futex_s3264.c  getdents_s3264.c  getrusage_s3264.c  gettimeofday_s3264.c  groups_s3264.c  itimer_s3264.c  keyctl_s3264.c  llseek_s3264.c  mqueue_s3264.c  msg_s3264.c  network_s3264.c  ppoll_s3264.c  prctl_s3264.c  readv_writev_s3264.c  rlimit_s3264.c  sched_s3264.c  select_s3264.c  sendfile_s3264.c  shm_s3264.c  signal_s3264.c  stat_s3264.c  syscall32_64.c  syscall32_64.h  syscall32_64_private.h  syscall32_64_types.h  sysinfo_s3264.c  timer_s3264.c  times_s3264.c  utime_s3264.c  vmsplice_s3264.c  wait_s3264.c  writev_s3264.c
src/syscall/syscall64_64/: CMakeLists.txt  epoll_s6464.c  execve_s6464.c  fcntl_s6464.c  futex_s6464.c  ipc_s6464.c  pselect_s6464.c  readlink_s6464.c  syscall64_64.c  syscall64_64.h  syscall64_64_private.h
src/syscall/x86_64/: CMakeLists.txt  syscall_neutral_64.c  syscall_x86_64.h  syscall_x86_64_stat.c
src/version/: version.h.in
src/x86_64/: CMakeLists.txt  start.S  umeq.c
test/: CMakeLists.txt
test/cache/: cache.cpp
test/jitter/: add.cpp  and.cpp  asr.cpp  call.cpp  cast.cpp  cmpeq.cpp  cmpne.cpp  const.cpp  context.cpp  exit.cpp  ite.cpp  jitterFixture.h  load.cpp  or.cpp  ror.cpp  shl.cpp  shr.cpp  sub.cpp  xor.cpp
test/static/arm/opcode/arm/: CMakeLists.txt  a  b  c  d  e  i  l  m  o  p  q  r  s  t  u  w  y
test/static/arm/opcode/arm/neon/: va  vc  vd  vf  vl  vm  vn  vp  vs
test/static/arm/opcode/arm/simd/: va  vb  vc  vd  ve  vf  vh  vl  vm  vn  vo  vp  vq  vr  vs  vt  vu  vz
test/static/arm/opcode/t1/: CMakeLists.txt  a  b  c  e  i  l  m  n  o  p  r  s  t  u  w  y
test/static/arm/opcode/t2/: CMakeLists.txt  a  b  c  d  e  i  l  m  o  p  q  r  s  t  u
test/static/arm/opcode/t2/neon/: va  vc  vd  vf  vl  vm  vn  vp  vs
test/static/arm/opcode/t2/simd/: va  vb  vc  vd  ve  vf  vh  vl  vm  vn  vo  vp  vq  vr  vs  vt  vu  vz
test/static/arm64/opcode/: CMakeLists.txt
test/static/arm64/opcode/base/: a  b  c  d  e  i  l  m  o  r  s  t  u
test/static/arm64/opcode/floating/: fa  fc  fd  fm  fn  fr  fs  sc  uc
test/static/arm64/opcode/neon/: a  b  c  d  e  i  l  m  n  o  p  r  s  t  u  x  z
test/static/libc/hello/: a.out.O0.arm  a.out.O0.thumb  a.out.O1.arm  a.out.O1.thumb  a.out.O2.arm  a.out.O2.thumb  main.c
test/static/nolib/hello/: a.out.O0.arm  a.out.O0.thumb  a.out.O1.arm  a.out.O1.thumb  a.out.O2.arm  a.out.O2.thumb  main.c
test/static/nolib/helloloop/: a.out.O0.arm  a.out.O0.thumb  a.out.O1.arm  a.out.O1.thumb  a.out.O2.arm  a.out.O2.thumb  main.c
