enable_language(C ASM)
add_library(runtime syscall_wrapper/exit.c assert.c syscall_wrapper/abort.c syscall_wrapper/syscall.S stdio.c syscall_wrapper/write.c log.c syscall_wrapper/open.c syscall_wrapper/read.c syscall_wrapper/lseek.c syscall_wrapper/close.c syscall_wrapper/map.c string.c pthread.c syscall_wrapper/unlink.c syscall_wrapper/socket.c syscall_wrapper/fcntl.c syscall_wrapper/shmctl.c math.c syscall_wrapper/limit.c)