if (UMEQ_ARCH_X64)
	set (SRCS adapters/guest32_to_neutral64_adapter.c)
	add_subdirectory (x86_64)
	add_library (syscall32_64 ${SRCS})
	add_subdirectory (syscall64_64)
elseif (UMEQ_ARCH_X86)
	set (SRCS adapters/guest32_to_neutral32_adapter.c)
	add_subdirectory (i386)
	add_library (syscall32_32 ${SRCS})
endif (UMEQ_ARCH_X64)