if (UMEQ_ARCH_x64_64)
	set (SRCS adapters/guest32_to_neutral64_adapter.c adapters/shebang.c)
	set (SRCS_64 adapters/guest64_to_neutral64_adapter.c adapters/shebang.c)
	add_subdirectory (x86_64)
	add_library (syscall32_64 ${SRCS})
	add_library (syscall64_64 ${SRCS_64})
elseif (UMEQ_ARCH_i386)
	set (SRCS adapters/guest32_to_neutral32_adapter.c adapters/shebang.c)
	add_subdirectory (i386)
	add_library (syscall32_32 ${SRCS})
endif (UMEQ_ARCH_x64_64)