add_library (syscall32_64 syscall32_64.c stat_s3264.c fcntl_s3264.c getdents_s3264.c llseek_s3264.c clock_s3264.c gettimeofday_s3264.c rlimit_s3264.c wait_s3264.c execve_s3264.c writev_s3264.c futex_s3264.c getrusage_s3264.c select_s3264.c  network_s3264.c utime_s3264.c sysinfo_s3264.c itimer_s3264.c timer_s3264.c signal_s3264.c shm_s3264.c times_s3264.c epoll_s3264.c msg_s3264.c sched_s3264.c mqueue_s3264.c groups_s3264.c sendfile_s3264.c ppoll_s3264.c readv_writev_s3264.c)